[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Dirt.png" type="Texture" id=1]
[ext_resource path="res://Level.gd" type="Script" id=2]
[ext_resource path="res://Assets/Building1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Building2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Building3.png" type="Texture" id=5]
[ext_resource path="res://Assets/CautionTape.png" type="Texture" id=6]
[ext_resource path="res://Assets/Underground.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sidewalk.png" type="Texture" id=8]
[ext_resource path="res://icon.png" type="Texture" id=9]
[ext_resource path="res://Assets/Background.png" type="Texture" id=10]
[ext_resource path="res://Camera2D.gd" type="Script" id=11]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Building4.png" type="Texture" id=13]
[ext_resource path="res://Sound/Build1.wav" type="AudioStream" id=14]
[ext_resource path="res://Sound/Build2.wav" type="AudioStream" id=15]
[ext_resource path="res://Sound/Build3.wav" type="AudioStream" id=16]
[ext_resource path="res://Sound/Land2.wav" type="AudioStream" id=17]
[ext_resource path="res://Sound/Land3.wav" type="AudioStream" id=18]
[ext_resource path="res://Sound/Land1.wav" type="AudioStream" id=19]
[ext_resource path="res://Sound/Fail.wav" type="AudioStream" id=20]
[ext_resource path="res://Sound/Click.wav" type="AudioStream" id=21]
[ext_resource path="res://Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.9985, 31.9329 )

[sub_resource type="TileSet" id=2]
0/name = "Sidewalk.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Underground.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Dirt.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.002, 237.057 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.0017, 244.353 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 150, 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 880, 1 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Building1",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Building2",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Building4",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Building3",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 22 )

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( 299.285, 296 )
scale = Vector2( 10, 1 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 0.471498, -8 )
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="Ground"]
position = Vector2( -29.929, -296 )
scale = Vector2( 0.1, 1 )
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 458751, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 524287, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 589823, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
offset = Vector2( 300, 168 )
current = true
smoothing_enabled = true
script = ExtResource( 11 )

[node name="Tween" type="Tween" parent="Camera2D"]
pause_mode = 2

[node name="BottomTimer" type="Timer" parent="Camera2D"]
wait_time = 3.0
one_shot = true

[node name="LoseTimer" type="Timer" parent="."]
pause_mode = 2
one_shot = true

[node name="LeftBound" type="Area2D" parent="."]
position = Vector2( 136, 0 )
collision_layer = 8

[node name="LeftCollision" type="CollisionShape2D" parent="LeftBound"]
position = Vector2( 0, 153.005 )
scale = Vector2( 1, 1e+06 )
shape = SubResource( 3 )

[node name="RightBound" type="Area2D" parent="."]
position = Vector2( 464, 0 )
collision_layer = 8

[node name="RightCollision" type="CollisionShape2D" parent="RightBound"]
position = Vector2( 0, 168 )
scale = Vector2( 1, 1e+06 )
shape = SubResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_offset = Vector2( 0, 2 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.623529, 0.623529, 0.623529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
self_modulate = Color( 1, 1, 1, 0.686275 )
texture = ExtResource( 10 )
centered = false

[node name="LeftTape" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 360 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/LeftTape"]
position = Vector2( 122, 0 )
texture = ExtResource( 6 )
centered = false

[node name="RightTape" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 360 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/RightTape"]
position = Vector2( 450, 0 )
texture = ExtResource( 6 )
centered = false

[node name="DiffTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 16
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
position = Vector2( 300, 50 )
scale = Vector2( 1, 50 )
shape = SubResource( 5 )

[node name="ScoreArea" type="Area2D" parent="."]
position = Vector2( 300, 260 )
scale = Vector2( 0.1, 0.1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="ScoreArea"]
visible = false
texture = ExtResource( 9 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="ScoreArea"]
scale = Vector2( 3, 3 )

[node name="BuildingsFolder" type="Node" parent="."]

[node name="SFX" type="Node" parent="."]
pause_mode = 2

[node name="DropBuilding1" type="AudioStreamPlayer2D" parent="SFX"]
pause_mode = 2
stream = ExtResource( 14 )
bus = "SFX"

[node name="DropBuilding2" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 15 )
volume_db = -8.0
bus = "SFX"

[node name="DropBuilding3" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 16 )
bus = "SFX"

[node name="Landing1" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 19 )
bus = "SFX"

[node name="Landing2" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 17 )
bus = "SFX"

[node name="Landing3" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 18 )
bus = "SFX"

[node name="Fail" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 20 )

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="SFX"]
pause_mode = 2
stream = ExtResource( 21 )
bus = "SFX"

[node name="HUD" parent="." instance=ExtResource( 12 )]
visible = false

[node name="CursorBuilding" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
frames = SubResource( 7 )
animation = "Building4"

[node name="Start" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 185.5
margin_top = 125.0
margin_right = 414.5
margin_bottom = 148.0
custom_fonts/font = SubResource( 8 )
text = "Click anywhere to start!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="lost" from="." to="HUD" method="_on_Level_lost"]
[connection signal="bottomed_out" from="Camera2D" to="." method="_on_Camera2D_bottomed_out"]
[connection signal="update_score" from="Camera2D" to="HUD" method="_on_Camera2D_update_score"]
[connection signal="timeout" from="Camera2D/BottomTimer" to="Camera2D" method="_on_BottomTimer_timeout"]
[connection signal="timeout" from="LoseTimer" to="." method="_on_LoseTimer_timeout"]
[connection signal="body_entered" from="LeftBound" to="." method="_on_Bound_body_entered"]
[connection signal="body_entered" from="RightBound" to="." method="_on_Bound_body_entered"]
[connection signal="timeout" from="DiffTimer" to="." method="_on_DiffTimer_timeout"]
[connection signal="body_entered" from="ClickArea" to="." method="_on_ClickArea_body_entered"]
[connection signal="body_exited" from="ClickArea" to="." method="_on_ClickArea_body_exited"]
[connection signal="body_entered" from="ScoreArea" to="." method="_on_ScoreArea_body_entered"]
[connection signal="body_exited" from="ScoreArea" to="." method="_on_ScoreArea_body_exited"]
[connection signal="play_again" from="HUD" to="." method="_on_HUD_play_again"]
